# GasSimulation

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ccpp.yml  formatter.yml  linter.yml
include/: Gas.h  Octree.h  Particle.h  vector3D.h  vector3D.hpp
src/: CMakeLists.txt  Gas.cpp  Octree.cpp  Particle.cpp  main.cpp  vector3D.cpp
